[package]
name = "pwrsurge"
version = "0.2.3"
authors = ["John Baublitz <john.m.baublitz@gmail.com>"]
description = "Dynamic, minimalistic power manager written in Rust"
license = "BSD-3-Clause"
repository = "https://github.com/jbaublitz/pwrsurge"
keywords = ["power", "manager", "acpi", "multithreaded"]
include = [
    "src/*.rs",
    "Cargo.toml",
    "LICENSE",
]

[dependencies]
buffering = "0.1"
libc = "0.2"
libloading = "0.5"
getopts = "0.2"
rust-ini = "0.10"
tokio = "0.1.6"

[dev-dependencies]
byteorder = "1.2"

[dependencies.neli]
version = "0.4.1"
features = ["stream"]
