[package]
name = "pwrsurge"
edition = "2018"
version = "0.3.1"
authors = ["John Baublitz <john.m.baublitz@gmail.com>"]
description = "Dynamic, minimalistic power manager written in Rust"
license = "BSD-3-Clause"
repository = "https://github.com/jbaublitz/pwrsurge"
keywords = ["power", "manager", "acpi", "multithreaded"]
include = [
    "src/*.rs",
    "Cargo.toml",
    "LICENSE",
]

[dependencies]
libc = "0.2"
libloading = "0.5"
getopts = "0.2"
rust-ini = "0.10"
buffering = "0.5"
futures-util = "0.3"

[dependencies.tokio]
version = "1.8"
features = ["fs", "rt"]

[dev-dependencies]
byteorder = "1.2"

[dependencies.neli]
version = "0.5.1"
features = ["async"]
