[package]
name = "libevents"
version = "0.1.0"
edition = "2018"
authors = ["John Baublitz <john.m.baublitz@gmail.com>"]
description = "Example handler"
license = "BSD-3-Clause"
repository = "https://github.com/jbaublitz/pwrsurge"

[lib]
name = "events"
path = "suspend.rs"
crate-type = ["cdylib"]

[dependencies]
buffering = { version = "0.4.0", features = ["nocopy"] }
libc = "0.2"
neli = "0.5"
